# binuma

./: .gitignore  README.md  pyproject.toml
.github/workflows/: app.yml  docs.yml
docs/: binuma.html  index.html  search.js
docs/binuma/: burden.html  datasets.html  donor.html  genotype.html  metadata.html  sfs.html
docs/binuma/datasets/: mitchell2022.html
src/binuma/: __init__.py  burden.py  donor.py  genotype.py  metadata.py  sfs.py
src/binuma/datasets/: __init__.py  kamizela2025.py  mitchell2022.py
src/binuma/datasets/simulations/: hsc.py  parameters.py
tests/: test_genotype.py  test_metadata.py  test_mitchell2022.py  test_parameters.py  test_sfs.py
tests/integration/: test_integration_hsc.py  test_integration_kamizela2025.py  test_integration_mitchell2022.py
tests/integration/fixtures/: mutMatrixCB001.csv  mutTypeCB001.csv  pd57332.csv
tests/integration/fixtures/10000cells/sfs/0dot0years/: 4mu_0dot01mean_0dot01std_1tau_10000cells_260idx.json
tests/integration/fixtures/10000cells/sfs/11dot0years/: 4mu_0dot01mean_0dot01std_1tau_10000cells_260idx.json
tests/integration/fixtures/5000cells/sfs/5dot0years/: 4mu_0dot01mean_0dot01std_1tau_10000cells_260idx.json
