[project]
name = "binuma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francesco Terenzi", email = "fra.terenz1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "futils",
    "pandantic>=1.0.1",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
futils = { git = "https://github.com/fraterenz/futils" }

[dependency-groups]
dev = [
    "hypothesis>=6.135.29",
    "pandas-stubs>=2.3.0.250703",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
]
