[project]
name = "binuma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francesco Terenzi", email = "fra.terenz1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "futils",
    "pandas>=2.3.1",
    "pandera[pandas]>=0.25.0",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
futils = { git = "https://github.com/fraterenz/futils" }

[dependency-groups]
dev = [
    "hypothesis>=6.136.7",
    "pandas-stubs>=2.3.0.250703",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
]
